Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Attack on Titan -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La Sirenita 3: Los comienzos de Ariel -->
+<li>
+  <a href="../Peliculas/pelicula664.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/yFWP8BSOVC8tQ3NI34gfvEhUqZl.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">La Sirenita 3: Los comienzos de Ariel 2008</span>
+    <span class="hidden">Mucho antes de conocer al príncipe Eric y poner los pies en la tierra, Ariel era una de las siete hijas queridas del poderoso rey Tritón. Pero los tiempos estaban cambiando en el reino submarino, y la música estaba prohibida. En esta aventura, Ariel, sus hermanas y sus amigos los leales Sebastián y Flounder, se esfuerzan por devolver la música y la amistad al reino de Atlántica.</span>
+  </a>
+</li>
+<!--FIN--><!-- Attack on Titan -->
 <li>
   <a href="../Series/serie72.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
