--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La sirenita -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El sobreviviente -->
+<li>
+  <a href="../Peliculas/pelicula666.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/5ifKF7FCYdkzt5BoQicfeUvfYuS.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El sobreviviente 2013</span>
+    <span class="hidden">Año 2005. A un equipo de élite de las fuerzas especiales SEAL del ejército norteamericano, liderados por Marcus Luttrell junto a otros tres soldados les es encomendada una peligrosa misión, la "Operación red wing": capturar o matar a un líder terrorista talibán, Admad Shad, que se esconde en una zona boscosa de Afganistán. La llegada al punto donde localizaron el objetivo se realizó sin problemas, pero pronto la situación se complicó hasta extremos inimaginables.</span>
+  </a>
+</li>
+<!--FIN--><!-- La sirenita -->
 <li>
   <a href="../Peliculas/pelicula665.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
