Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La masacre de Texas -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los Croods -->
+<li>
+  <a href="../Peliculas/pelicula668.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/3X3qtBTgKt5mCB30RJwbIjgjzdw.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Los Croods 2013</span>
+    <span class="hidden">Los Croods es una aventura de comedia prehistórica que sigue a la primera familia del mundo mientras se embarcan en un viaje de toda una vida cuando la cueva que siempre los ha protegido del peligro se destruye. Viajando a través de un paisaje espectacular, los Croods descubrir un nuevo mundo increíble lleno de criaturas fantásticas, y maravillosas aventuras,  haciendo que su perspectiva se cambie para siempre.</span>
+  </a>
+</li>
+<!--FIN--><!-- La masacre de Texas -->
 <li>
   <a href="../Peliculas/pelicula667.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
