Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los Croods -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los Croods 2: Una Nueva Era -->
+<li>
+  <a href="../Peliculas/pelicula669.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/5uMWKEmegf5aTJnp1u98JF4QerP.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Los Croods 2: Una Nueva Era 2020</span>
+    <span class="hidden">La familia prehistórica Los Croods es desafiada por una familia rival, los Betterman, que dicen ser mejores y más evolucionados.</span>
+  </a>
+</li>
+<!--FIN--><!-- Los Croods -->
 <li>
   <a href="../Peliculas/pelicula668.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
