--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Los Croods 2: Una Nueva Era -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Baki Hanma vs. Kengan Ashura -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula670.html">
+    <img src="https://image.tmdb.org/t/p/original/npqKtCydaOCrPBKVsSNoGfLVD14.jpg" alt="Baki Hanma vs. Kengan Ashura" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Baki Hanma vs. Kengan Ashura</div>
+  <div class="text-xs text-white/70">2024</div>
+</article><!-- Los Croods 2: Una Nueva Era -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula669.html">
     <img src="https://image.tmdb.org/t/p/original/5uMWKEmegf5aTJnp1u98JF4QerP.jpg" alt="Los Croods 2: Una Nueva Era" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
