Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los Croods 2: Una Nueva Era -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Baki Hanma vs. Kengan Ashura -->
+<li>
+  <a href="../Peliculas/pelicula670.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/npqKtCydaOCrPBKVsSNoGfLVD14.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Baki Hanma vs. Kengan Ashura 2024</span>
+    <span class="hidden">Llega la batalla definitiva. Los guerreros más poderosos de «Baki Hanma» y «KENGAN ASHURA» se enfrentan en este impactante anime sobre artes marciales sin precedentes.</span>
+  </a>
+</li>
+<!--FIN--><!-- Los Croods 2: Una Nueva Era -->
 <li>
   <a href="../Peliculas/pelicula669.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
