--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -139,7 +139,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/npqKtCydaOCrPBKVsSNoGfLVD14.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Baki Hanma vs. Kengan Ashura 2024</span>
-    <span class="hidden">Llega la batalla definitiva. Los guerreros más poderosos de «Baki Hanma» y «KENGAN ASHURA» se enfrentan en este impactante anime sobre artes marciales sin precedentes.</span>
+    <span class="hidden">versus vs contra Llega la batalla definitiva. Los guerreros más poderosos de «Baki Hanma» y «KENGAN ASHURA» se enfrentan en este impactante anime sobre artes marciales sin precedentes.</span>
   </a>
 </li>
 <!--FIN--><!-- Los Croods 2: Una Nueva Era -->
@@ -166,7 +166,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/2VnuxwgdMBEgVO7VKvkW6nmYfaM.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">La masacre de Texas 2022</span>
-    <span class="hidden">Melody (Sarah Yarkin), su hermana adolescente Lila (Elsie Fisher) y sus amigos Dante (Jacob Latimore) y Ruth (Nell Hudson) viajan al remoto pueblo de Harlow (Texas) para montar un negocio muy idealista. Pero su sueño se convierte en una auténtica pesadilla cuando molestan sin querer a Leatherface, el desquiciado asesino en serie cuyo sangriento legado sigue acechando a los habitantes de la zona, entre ellos Sally Hardesty (Olwen Fouéré), la única superviviente de su masacre de 1973, decidida a vengarse a muerte.</span>
+    <span class="hidden">en texas Melody (Sarah Yarkin), su hermana adolescente Lila (Elsie Fisher) y sus amigos Dante (Jacob Latimore) y Ruth (Nell Hudson) viajan al remoto pueblo de Harlow (Texas) para montar un negocio muy idealista. Pero su sueño se convierte en una auténtica pesadilla cuando molestan sin querer a Leatherface, el desquiciado asesino en serie cuyo sangriento legado sigue acechando a los habitantes de la zona, entre ellos Sally Hardesty (Olwen Fouéré), la única superviviente de su masacre de 1973, decidida a vengarse a muerte.</span>
   </a>
 </li>
 <!--FIN--><!-- El sobreviviente -->
