--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- 300 -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Una loca pelicula de Esparta -->
+<li>
+  <a href="../Peliculas/pelicula672.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/iX4ArGBpWfUEqu12knFb5ptUx9U.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Una loca película de Esparta 2008</span>
+    <span class="hidden">Parodia de la exitosa película "300". El heroico Leónidas, sin más armas que la ropa interior de cuero y una capa, lidera un grupo de 13 espartanos en defensa de su patria contra los invasores persas.</span>
+  </a>
+</li>
+<!--FIN--><!-- 300 -->
 <li>
   <a href="../Peliculas/pelicula671.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
