--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -130,7 +130,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/iX4ArGBpWfUEqu12knFb5ptUx9U.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Una loca película de Esparta 2008</span>
-    <span class="hidden">Parodia de la exitosa película "300". El heroico Leónidas, sin más armas que la ropa interior de cuero y una capa, lidera un grupo de 13 espartanos en defensa de su patria contra los invasores persas.</span>
+    <span class="hidden">casi 300 parodiada Parodia de la exitosa película "300". El heroico Leónidas, sin más armas que la ropa interior de cuero y una capa, lidera un grupo de 13 espartanos en defensa de su patria contra los invasores persas.</span>
   </a>
 </li>
 <!--FIN--><!-- 300 -->
