--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -114,7 +114,7 @@
       class="flex items-center text-white text-lg hover:text-yellow-400 transition ml-6" 
       title="Regresar" 
       type="button"
-      onclick="window.location.href='../index.html'">
+      onclick="window.location.href='https://lz.blogdepelis.lat/index.html'">
       <i class="fas fa-arrow-left text-2xl mr-3"></i> Regresar
     </button>
   </div>
