Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Una loca pelicula de Esparta -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- 300: El Nacimiento de un Imperio -->
+<li>
+  <a href="../Peliculas/pelicula673.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/cbt5wY4rCe63JBmNYnJytJpFhnm.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">300: El Nacimiento de un Imperio 2014</span>
+    <span class="hidden">Este nuevo capítulo de la saga épica lleva la acción a un nuevo campo de batalla, en el mar, mientras el general griego Themistokles intenta unir toda Grecia liderando la carga que cambiará el curso de la guerra. "300: El Nacimiento de un Imperio" enfrenta a Themistokles contra las masivas fuerzas invasoras persas lideradas por el mortal convertido en dios Xerxes y Artemesia, el vengativo comandante de la armada persa.</span>
+  </a>
+</li>
+<!--FIN--><!-- Una loca pelicula de Esparta -->
 <li>
   <a href="../Peliculas/pelicula672.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
