--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -130,7 +130,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/cbt5wY4rCe63JBmNYnJytJpFhnm.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">300: El Nacimiento de un Imperio 2014</span>
-    <span class="hidden">Este nuevo capítulo de la saga épica lleva la acción a un nuevo campo de batalla, en el mar, mientras el general griego Themistokles intenta unir toda Grecia liderando la carga que cambiará el curso de la guerra. "300: El Nacimiento de un Imperio" enfrenta a Themistokles contra las masivas fuerzas invasoras persas lideradas por el mortal convertido en dios Xerxes y Artemesia, el vengativo comandante de la armada persa.</span>
+    <span class="hidden">el origen un nuevo Este nuevo capítulo de la saga épica lleva la acción a un nuevo campo de batalla, en el mar, mientras el general griego Themistokles intenta unir toda Grecia liderando la carga que cambiará el curso de la guerra. "300: El Nacimiento de un Imperio" enfrenta a Themistokles contra las masivas fuerzas invasoras persas lideradas por el mortal convertido en dios Xerxes y Artemesia, el vengativo comandante de la armada persa.</span>
   </a>
 </li>
 <!--FIN--><!-- Una loca pelicula de Esparta -->
