Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- 300: El Nacimiento de un Imperio -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El pasado que nos une -->
+<li>
+  <a href="../Peliculas/pelicula674.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/s5NorLt79GyTgqWM2ewCBhhNUne.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El pasado que nos une 2019</span>
+    <span class="hidden">La directora de un orfanato hindú se encuentra al borde de la bancarrota. Cuando descubre que su organización está a punto de recibir una considerable donación por parte de una empresaria norteamericana, viaja a Nueva York para conocerla. Sin embargo, allí se verá obligada a confrontar un pasado del que huyó tiempo atrás.</span>
+  </a>
+</li>
+<!--FIN--><!-- 300: El Nacimiento de un Imperio -->
 <li>
   <a href="../Peliculas/pelicula673.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
