--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -130,7 +130,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/s5NorLt79GyTgqWM2ewCBhhNUne.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">El pasado que nos une 2019</span>
-    <span class="hidden">La directora de un orfanato hindú se encuentra al borde de la bancarrota. Cuando descubre que su organización está a punto de recibir una considerable donación por parte de una empresaria norteamericana, viaja a Nueva York para conocerla. Sin embargo, allí se verá obligada a confrontar un pasado del que huyó tiempo atrás.</span>
+    <span class="hidden">despues de la boda La directora de un orfanato hindú se encuentra al borde de la bancarrota. Cuando descubre que su organización está a punto de recibir una considerable donación por parte de una empresaria norteamericana, viaja a Nueva York para conocerla. Sin embargo, allí se verá obligada a confrontar un pasado del que huyó tiempo atrás.</span>
   </a>
 </li>
 <!--FIN--><!-- 300: El Nacimiento de un Imperio -->
