Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El pasado que nos une -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Pasajeros -->
+<li>
+  <a href="../Peliculas/pelicula675.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/iLMtX4MGl8WjKCPfMgCdDuceOth.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Pasajeros 2016</span>
+    <span class="hidden">Una nave espacial que viaja a un planeta colonia distante y transporta a miles de personas tiene un mal funcionamiento en sus cámaras de sueño. Como resultado, dos pasajeros son despertados 90 años antes.</span>
+  </a>
+</li>
+<!--FIN--><!-- El pasado que nos une -->
 <li>
   <a href="../Peliculas/pelicula674.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
