--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Pasajeros -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Moana 2 -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula676.html">
+    <img src="https://image.tmdb.org/t/p/original/bit1B5F7IQydiWqdwAAD8f9TkXs.jpg" alt="Moana 2" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Moana 2</div>
+  <div class="text-xs text-white/70">2024</div>
+</article><!-- Pasajeros -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula675.html">
     <img src="https://image.tmdb.org/t/p/original/iLMtX4MGl8WjKCPfMgCdDuceOth.jpg" alt="Pasajeros" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
