--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Pasajeros -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Moana 2 -->
+<li>
+  <a href="../Peliculas/pelicula676.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/bit1B5F7IQydiWqdwAAD8f9TkXs.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Moana 2 2024</span>
+    <span class="hidden">Después de recibir una llamada inesperada de sus antepasados ​​navegantes, Moana viajará a los lejanos mares de Oceanía, donde vivirá una peligrosa aventura con su nueva tripulación.</span>
+  </a>
+</li>
+<!--FIN--><!-- Pasajeros -->
 <li>
   <a href="../Peliculas/pelicula675.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
