--- a/Categorias/fantasia/index.html
+++ b/Categorias/fantasia/index.html
@@ -71,7 +71,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Una loca pelicula de Esparta -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Soul -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula677.html">
+    <img src="https://image.tmdb.org/t/p/original/xJ7MCAy4oCLerPo3JjnB8lKOhl4.jpg" alt="Soul" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Soul</div>
+  <div class="text-xs text-white/70">2020</div>
+</article><!-- Una loca pelicula de Esparta -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula672.html">
     <img src="https://image.tmdb.org/t/p/original/iX4ArGBpWfUEqu12knFb5ptUx9U.jpg" alt="Una loca película de Esparta" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
