--- a/Categorias/cienciaficcion/index.html
+++ b/Categorias/cienciaficcion/index.html
@@ -68,7 +68,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Pasajeros -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- V de Venganza -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula678.html">
+    <img src="https://image.tmdb.org/t/p/original/yJea98u5qGwRoKlWhUXZw5rUaqo.jpg" alt="V de Venganza" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">V de Venganza</div>
+  <div class="text-xs text-white/70">2006</div>
+</article><!-- Pasajeros -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula675.html">
     <img src="https://image.tmdb.org/t/p/original/iLMtX4MGl8WjKCPfMgCdDuceOth.jpg" alt="Pasajeros" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
