Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Soul -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- V de Venganza -->
+<li>
+  <a href="../Peliculas/pelicula678.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/yJea98u5qGwRoKlWhUXZw5rUaqo.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">V de Venganza 2006</span>
+    <span class="hidden">Una tarde, tras el toque de queda, Evey es rescatada en plena calle por un misterioso enmascarado cuyo nombre es "V". El extraño personaje le explica cuáles son sus planes para recuperar la libertad.</span>
+  </a>
+</li>
+<!--FIN--><!-- Soul -->
 <li>
   <a href="../Peliculas/pelicula677.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
