--- a/Categorias/aventura/index.html
+++ b/Categorias/aventura/index.html
@@ -72,7 +72,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Moana 2 -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Los Angeles de Charlie 2: Al Limite -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula679.html">
+    <img src="https://image.tmdb.org/t/p/original/bM7N86wO8aK0kCJRTshC6JWem8l.jpg" alt="Los Ángeles de Charlie 2: Al Límite" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Los Ángeles de Charlie 2: Al Límite</div>
+  <div class="text-xs text-white/70">2003</div>
+</article><!-- Moana 2 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula676.html">
     <img src="https://image.tmdb.org/t/p/original/bit1B5F7IQydiWqdwAAD8f9TkXs.jpg" alt="Moana 2" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
