Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- V de Venganza -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los Angeles de Charlie 2: Al Limite -->
+<li>
+  <a href="../Peliculas/pelicula679.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/bM7N86wO8aK0kCJRTshC6JWem8l.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Los Ángeles de Charlie 2: Al Límite 2003</span>
+    <span class="hidden">La misión de Natalie, Dylan y Alex, las agentes secretas de Charlie, es recuperar unos anillos que han desaparecido y que contienen información acerca del plan de protección de testigos del FBI. Una antigua compañera de la agencia es la sospechosa.</span>
+  </a>
+</li>
+<!--FIN--><!-- V de Venganza -->
 <li>
   <a href="../Peliculas/pelicula678.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
