--- a/Categorias/animacion/index.html
+++ b/Categorias/animacion/index.html
@@ -69,7 +69,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Soul -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- El extrano mundo de Jack -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula680.html">
+    <img src="https://image.tmdb.org/t/p/original/pqFPpQ77VZ0moRgRRsxx7p39CS3.jpg" alt="El extraño mundo de Jack" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">El extraño mundo de Jack</div>
+  <div class="text-xs text-white/70">1993</div>
+</article><!-- Soul -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula677.html">
     <img src="https://image.tmdb.org/t/p/original/xJ7MCAy4oCLerPo3JjnB8lKOhl4.jpg" alt="Soul" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
