Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los Angeles de Charlie 2: Al Limite -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El extrano mundo de Jack -->
+<li>
+  <a href="../Peliculas/pelicula680.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/pqFPpQ77VZ0moRgRRsxx7p39CS3.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El extraño mundo de Jack 1993</span>
+    <span class="hidden">Cansado de asustar a los humanos cada 31 de octubre con la misma vieja bolsa de trucos, Jack Skellington, el rey de Halloween Town, secuestra a Santa Claus y planea entregar cabezas encogidas y otros regalos macabros a los niños en la mañana de Navidad. Pero a medida que la Navidad se acerca, la novia de Jack, Sally, intenta frustrar sus planes equivocados.</span>
+  </a>
+</li>
+<!--FIN--><!-- Los Angeles de Charlie 2: Al Limite -->
 <li>
   <a href="../Peliculas/pelicula679.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
