--- a/Categorias/comedia/index.html
+++ b/Categorias/comedia/index.html
@@ -40,7 +40,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Los Angeles de Charlie 2: Al Limite -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- ¡Quieren volverme loco! -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula681.html">
+    <img src="https://image.tmdb.org/t/p/original/1um1GWa8AguAVmNioGfz0WCptVQ.jpg" alt="¡Quieren volverme loco!" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">¡Quieren volverme loco!</div>
+  <div class="text-xs text-white/70">2005</div>
+</article><!-- Los Angeles de Charlie 2: Al Limite -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula679.html">
     <img src="https://image.tmdb.org/t/p/original/bM7N86wO8aK0kCJRTshC6JWem8l.jpg" alt="Los Ángeles de Charlie 2: Al Límite" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
