--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El extrano mundo de Jack -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- ¡Quieren volverme loco! -->
+<li>
+  <a href="../Peliculas/pelicula681.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/1um1GWa8AguAVmNioGfz0WCptVQ.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">¡Quieren volverme loco! 2005</span>
+    <span class="hidden">Nick es un seductor que intenta conseguir una cita con la joven y atractiva divorciada Suzanne. El problema es que Suzanne está atrapada trabajando en Vancouver, y además es infeliz porque está perdiendo a sus hijos. Nick ve la oportunidad de conquistarla, y se ofrece galantemente a hacer realidad los deseos de Suzanne –y los suyos al mismo tiempo– trayendo desde Portland, Oregon, a Kevin, de siete años, y a Lindsey, de once, para que se reúnan con su mamá. Lo que Nick no sabe es que los hijos de Suzanne piensan que ningún hombre es lo bastante bueno para su madre y que harán todo lo posible para convertir el viaje en una pesadilla.</span>
+  </a>
+</li>
+<!--FIN--><!-- El extrano mundo de Jack -->
 <li>
   <a href="../Peliculas/pelicula680.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
