--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -130,7 +130,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/1um1GWa8AguAVmNioGfz0WCptVQ.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">¡Quieren volverme loco! 2005</span>
-    <span class="hidden">Nick es un seductor que intenta conseguir una cita con la joven y atractiva divorciada Suzanne. El problema es que Suzanne está atrapada trabajando en Vancouver, y además es infeliz porque está perdiendo a sus hijos. Nick ve la oportunidad de conquistarla, y se ofrece galantemente a hacer realidad los deseos de Suzanne –y los suyos al mismo tiempo– trayendo desde Portland, Oregon, a Kevin, de siete años, y a Lindsey, de once, para que se reúnan con su mamá. Lo que Nick no sabe es que los hijos de Suzanne piensan que ningún hombre es lo bastante bueno para su madre y que harán todo lo posible para convertir el viaje en una pesadilla.</span>
+    <span class="hidden">quieren volverme quieres loco cuando llegamos Nick es un seductor que intenta conseguir una cita con la joven y atractiva divorciada Suzanne. El problema es que Suzanne está atrapada trabajando en Vancouver, y además es infeliz porque está perdiendo a sus hijos. Nick ve la oportunidad de conquistarla, y se ofrece galantemente a hacer realidad los deseos de Suzanne –y los suyos al mismo tiempo– trayendo desde Portland, Oregon, a Kevin, de siete años, y a Lindsey, de once, para que se reúnan con su mamá. Lo que Nick no sabe es que los hijos de Suzanne piensan que ningún hombre es lo bastante bueno para su madre y que harán todo lo posible para convertir el viaje en una pesadilla.</span>
   </a>
 </li>
 <!--FIN--><!-- El extrano mundo de Jack -->
@@ -139,7 +139,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/pqFPpQ77VZ0moRgRRsxx7p39CS3.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">El extraño mundo de Jack 1993</span>
-    <span class="hidden">Cansado de asustar a los humanos cada 31 de octubre con la misma vieja bolsa de trucos, Jack Skellington, el rey de Halloween Town, secuestra a Santa Claus y planea entregar cabezas encogidas y otros regalos macabros a los niños en la mañana de Navidad. Pero a medida que la Navidad se acerca, la novia de Jack, Sally, intenta frustrar sus planes equivocados.</span>
+    <span class="hidden">pesadilla pesadillas antes de navidad Cansado de asustar a los humanos cada 31 de octubre con la misma vieja bolsa de trucos, Jack Skellington, el rey de Halloween Town, secuestra a Santa Claus y planea entregar cabezas encogidas y otros regalos macabros a los niños en la mañana de Navidad. Pero a medida que la Navidad se acerca, la novia de Jack, Sally, intenta frustrar sus planes equivocados.</span>
   </a>
 </li>
 <!--FIN--><!-- Los Angeles de Charlie 2: Al Limite -->
