--- a/Plataforma/navidad/index.html
+++ b/Plataforma/navidad/index.html
@@ -159,7 +159,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Mi pobre angelito -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Mi pobre angelito 2: Perdido en Nueva York -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula683.html">
+    <img src="https://image.tmdb.org/t/p/original/7sdiRUyc0ANHJptPhsgb1KL6hoq.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Mi pobre angelito 2: Perdido en Nueva York</div>
+  <div class="text-xs text-white/70">1992</div>
+</article><!-- Mi pobre angelito -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="https://lz.blogdepelis.lat/Peliculas/pelicula682.html">
     <img src="https://image.tmdb.org/t/p/original/rjc2a9N5pro1xGsSvvnJ1JDXRGm.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
