Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mi pobre angelito -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mi pobre angelito 2: Perdido en Nueva York -->
+<li>
+  <a href="../Peliculas/pelicula683.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/7sdiRUyc0ANHJptPhsgb1KL6hoq.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Mi pobre angelito 2: Perdido en Nueva York 1992</span>
+    <span class="hidden">En plenas fiestas navideñas, el pequeño Kevin y su familia están a punto de coger un avión para disfrutar de unas pequeñas vacaciones, pero Kevin se equivoca y embarca en un avión que lo lleva a Nueva York, donde vuelve a encontrarse solo y desprotegido.</span>
+  </a>
+</li>
+<!--FIN--><!-- Mi pobre angelito -->
 <li>
   <a href="../Peliculas/pelicula682.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
