Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mi pobre angelito 2: Perdido en Nueva York -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mi pobre angelito 3 -->
+<li>
+  <a href="../Peliculas/pelicula684.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/720eeviFT6G8SStX2lEgFsYzqAp.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Mi pobre angelito 3 1997</span>
+    <span class="hidden">Cuatro espías de alta tecnología industrial roban un microchip ultrasecreto y confiadamente lo ocultan en un coche de juguete de control remoto. Por causa de una confusión de equipajes en el aeropuerto, la anciana señora Hess recoge el juguete y se lo regala a su vecino de ocho años Alex. Los espías desearán recuperar el valioso chip a toda costa, pero Alex está preparado para darles una cálida bienvenida.</span>
+  </a>
+</li>
+<!--FIN--><!-- Mi pobre angelito 2: Perdido en Nueva York -->
 <li>
   <a href="../Peliculas/pelicula683.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
