Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mi pobre angelito 4 -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mi pobre angelito 5 -->
+<li>
+  <a href="../Peliculas/pelicula686.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/nxxcHTbqNrEkrJvtCzxzm3TDtU.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Mi pobre angelito 5 2012</span>
+    <span class="hidden">Finn Baxter y su familia se mudan de California a Maine a su nueva casa. Finn está aterrorizado y cree que la casa está embrujada. Mientras que instala trampas para coger al "fantasma", sus padres se quedan varados en la ciudad y Finn se quedá solo en casa con su hermana. Lo que no esperaban, es que su casa se convierte en el objetivo de tres ladrones en busca de un botín especial.</span>
+  </a>
+</li>
+<!--FIN--><!-- Mi pobre angelito 4 -->
 <li>
   <a href="../Peliculas/pelicula685.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
